<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/maco_ivory"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_farewell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="17dp"
                android:text="@string/farewell"
                android:textAppearance="@style/h1_medium"
                android:textColor="@color/maco_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ib_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_home"
                app:layout_constraintBottom_toBottomOf="@+id/tv_farewell"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_farewell" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_collect_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:text="@string/collect_memory"
            android:textColor="@color/maco_dark_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/maco_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_collect_memory" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="@+id/line"
            app:layout_constraintStart_toStartOf="@+id/line"
            app:layout_constraintTop_toBottomOf="@+id/line">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_image_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:shapeAppearanceOverlay="@style/bottom_left_rounded_corner_8"
                tools:src="@color/maco_orange" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rectangle_fill_white_right_8">

                <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/noto_sans_kr_medium"
                    android:textColor="@color/maco_gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/year2021" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_kr_medium"
                    android:textColor="@color/maco_dark_gray"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_year"
                    app:layout_constraintTop_toBottomOf="@+id/tv_year"
                    tools:text="@string/month6_day11" />

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:ellipsize="end"
                    android:textAppearance="@style/caption"
                    android:textColor="@color/maco_light_gray"
                    android:lines="4"
                    android:maxLines="4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_date"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date"
                    tools:text="@string/diary_content" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/help"
            android:textSize="18sp"
            android:textColor="@color/maco_dark_gray"
            android:fontFamily="@font/noto_sans_kr_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <ImageButton
            android:id="@+id/ib_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_help"
            app:layout_constraintBottom_toBottomOf="@+id/tv_help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_help" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>